--- a/src/app/components/menu-usuario/menu-usuario.component.css
+++ b/src/app/components/menu-usuario/menu-usuario.component.css
@@ -141,6 +141,29 @@ nav ul li:hover::after{
   display: flex;
   justify-content: space-between;
 }
+.contenedor-asientos{
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.sub-contenedor-asientos{
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+
+}
+select{
+width: 150px;
+margin-left: 10px;
+
+}
 
 
 
