--- a/src/app/components/menu-usuario/menu-usuario.component.html
+++ b/src/app/components/menu-usuario/menu-usuario.component.html
@@ -7,77 +7,151 @@
   </nav>
 
   <div class="main-content container">
-    <div class="booking-form">
+    <form [formGroup]="myForm" class="booking-form">
         <h3>Reserva de vuelos</h3>
         <div class="input-group">
-            <label for="">Vuela desde</label>
-            <input id="flying-from" class="inp-style" type="text" name="" placeholder="Dhake, Bangladesh" value="">
-        </div>
-        <div class="input-group">
-            <label for="">Vuela para</label>
-            <input id="flying-to" class="inp-style" type="text" name="" placeholder="New York, United States"
-                value="">
-        </div>
-        <div class="inputs">
-            <div class="input-group">
-                <label for="">Parte</label>
-                    <input id="departure-date" class="inp-style" type="date" name="" value="">
-            </div>
-            <div class="input-group">
-                <label for="">Regresa</label>
-                <input id="return-date" class="inp-style" type="date" name="">
-            </div>
+            <label for="">Seleccionar vuelo</label>
+            <select formControlName="idVuelo" >
+              <option   *ngFor="let item of vuelos" [value]="item.idVuelo">{{item.origen}} - {{item.destino}}</option>
+            </select>
         </div>
         <div class="input-group f-class">
             <div>
-                <label for="">Primera clase ($150)</label>
-                <input id="first-count" class="inp-style inp-width" type="number" name="" value="0">
+                <label for="">Clase vip</label>
             </div>
             <div class="plus-minus-btn">
-                <button id="first-plus-btn"> + </button> <button id="first-minus-btn"> - </button>
+
             </div>
+        </div>
+        <div class="contenedor-asientos" multiple >
+          <div class="sub-contenedor-asientos">
+            <input (click)="sasientoPrimera('00')" type="checkbox"/>
+            <input (click)="sasientoPrimera('01')" type="checkbox"/>
+            <input (click)="sasientoPrimera('02')" type="checkbox"/>
+            <input (click)="sasientoPrimera('03')" type="checkbox"/>
+            <input (click)="sasientoPrimera('04')" type="checkbox"/>
+          </div>
+          <div class="sub-contenedor-asientos">
+            <input (click)="sasientoPrimera('10')" type="checkbox"/>
+            <input (click)="sasientoPrimera('11')" type="checkbox"/>
+            <input (click)="sasientoPrimera('12')" type="checkbox"/>
+            <input (click)="sasientoPrimera('13')" type="checkbox"/>
+            <input (click)="sasientoPrimera('14')" type="checkbox"/>
+          </div>
+          <div class="sub-contenedor-asientos">
+            <input (click)="sasientoPrimera('20')" type="checkbox"/>
+            <input (click)="sasientoPrimera('21')" type="checkbox"/>
+            <input (click)="sasientoPrimera('22')" type="checkbox"/>
+            <input (click)="sasientoPrimera('23')" type="checkbox"/>
+            <input (click)="sasientoPrimera('24')" type="checkbox"/>
+          </div>
+          <div class="sub-contenedor-asientos">
+            <input (click)="sasientoPrimera('30')" type="checkbox"/>
+            <input (click)="sasientoPrimera('31')" type="checkbox"/>
+            <input (click)="sasientoPrimera('42')" type="checkbox"/>
+            <input (click)="sasientoPrimera('43')" type="checkbox"/>
+            <input (click)="sasientoPrimera('44')" type="checkbox"/>
+          </div>
+          <div class="sub-contenedor-asientos">
+            <input (click)="sasientoPrimera('50')" type="checkbox"/>
+            <input (click)="sasientoPrimera('51')" type="checkbox"/>
+            <input (click)="sasientoPrimera('52')" type="checkbox"/>
+            <input (click)="sasientoPrimera('53')" type="checkbox"/>
+            <input (click)="sasientoPrimera('54')" type="checkbox"/>
+          </div>
         </div>
 
         <div class="input-group f-class">
             <div>
-                <label for="">Clase economica ($100)</label>
-                <input id="economy-count" class="inp-style inp-width" type="number" name="" value="0">
+                <label for="">Clase Normal</label>
             </div>
             <div class="plus-minus-btn">
-                <button id="economy-plus-btn"> + </button> <button id="economy-minus-btn"> - </button>
             </div>
         </div>
-        <div class="calculations">
-            <div class="amount">
-                <div class="left">
-                    <p>Subtotal</p>
-                </div>
-                <div class="right">
-                    <p>$ <span id="sub-total">0</span></p>
-                </div>
-            </div>
-
-            <div class="amount">
-                <div class="left">
-                    <p>Iva 19% </p>
-                </div>
-                <div class="right">
-                    <p>$ <span id="total-vat">0</span></p>
-                </div>
-            </div>
-            <hr>
-            <div class="amount">
-                <div class="left">
-                    <h4>Total</h4>
-                </div>
-                <div class="right">
-                    <p>$ <span id="total-price">0</span></p>
-                </div>
-            </div>
+      <div class="contenedor-asientos" multiple >
+          <div class="sub-contenedor-asientos">
+            <input (click)="sasientoEconomico('00')" type="checkbox"/>
+            <input (click)="sasientoEconomico('01')" type="checkbox"/>
+            <input (click)="sasientoEconomico('02')" type="checkbox"/>
+            <input (click)="sasientoEconomico('03')" type="checkbox"/>
+            <input (click)="sasientoEconomico('04')" type="checkbox"/>
+          </div>
+          <div class="sub-contenedor-asientos">
+            <input (click)="sasientoEconomico('10')" type="checkbox"/>
+            <input (click)="sasientoEconomico('11')" type="checkbox"/>
+            <input (click)="sasientoEconomico('12')" type="checkbox"/>
+            <input (click)="sasientoEconomico('13')" type="checkbox"/>
+            <input (click)="sasientoEconomico('14')" type="checkbox"/>
+          </div>
+          <div class="sub-contenedor-asientos">
+            <input (click)="sasientoEconomico('20')" type="checkbox"/>
+            <input (click)="sasientoEconomico('21')" type="checkbox"/>
+            <input (click)="sasientoEconomico('22')" type="checkbox"/>
+            <input (click)="sasientoEconomico('23')" type="checkbox"/>
+            <input (click)="sasientoEconomico('24')" type="checkbox"/>
+          </div>
+          <div class="sub-contenedor-asientos">
+            <input (click)="sasientoEconomico('30')" type="checkbox"/>
+            <input (click)="sasientoEconomico('31')" type="checkbox"/>
+            <input (click)="sasientoEconomico('42')" type="checkbox"/>
+            <input (click)="sasientoEconomico('43')" type="checkbox"/>
+            <input (click)="sasientoEconomico('44')" type="checkbox"/>
+          </div>
+          <div class="sub-contenedor-asientos">
+            <input (click)="sasientoEconomico('50')" type="checkbox"/>
+            <input (click)="sasientoEconomico('51')" type="checkbox"/>
+            <input (click)="sasientoEconomico('52')" type="checkbox"/>
+            <input (click)="sasientoEconomico('53')" type="checkbox"/>
+            <input (click)="sasientoEconomico('54')" type="checkbox"/>
+          </div>
         </div>
+        <div class="input-group f-class">
+          <div>
+              <label for="">Clase Basica</label>
+          </div>
+          <div class="plus-minus-btn">
+          </div>
+      </div>
+    <div class="contenedor-asientos" multiple >
+        <div class="sub-contenedor-asientos">
+          <input (click)="sasientoEconomico('00')" type="checkbox"/>
+          <input (click)="sasientoEconomico('01')" type="checkbox"/>
+          <input (click)="sasientoEconomico('02')" type="checkbox"/>
+          <input (click)="sasientoEconomico('03')" type="checkbox"/>
+          <input (click)="sasientoEconomico('04')" type="checkbox"/>
+        </div>
+        <div class="sub-contenedor-asientos">
+          <input (click)="sasientoEconomico('10')" type="checkbox"/>
+          <input (click)="sasientoEconomico('11')" type="checkbox"/>
+          <input (click)="sasientoEconomico('12')" type="checkbox"/>
+          <input (click)="sasientoEconomico('13')" type="checkbox"/>
+          <input (click)="sasientoEconomico('14')" type="checkbox"/>
+        </div>
+        <div class="sub-contenedor-asientos">
+          <input (click)="sasientoEconomico('20')" type="checkbox"/>
+          <input (click)="sasientoEconomico('21')" type="checkbox"/>
+          <input (click)="sasientoEconomico('22')" type="checkbox"/>
+          <input (click)="sasientoEconomico('23')" type="checkbox"/>
+          <input (click)="sasientoEconomico('24')" type="checkbox"/>
+        </div>
+        <div class="sub-contenedor-asientos">
+          <input (click)="sasientoEconomico('30')" type="checkbox"/>
+          <input (click)="sasientoEconomico('31')" type="checkbox"/>
+          <input (click)="sasientoEconomico('42')" type="checkbox"/>
+          <input (click)="sasientoEconomico('43')" type="checkbox"/>
+          <input (click)="sasientoEconomico('44')" type="checkbox"/>
+        </div>
+        <div class="sub-contenedor-asientos">
+          <input (click)="sasientoEconomico('50')" type="checkbox"/>
+          <input (click)="sasientoEconomico('51')" type="checkbox"/>
+          <input (click)="sasientoEconomico('52')" type="checkbox"/>
+          <input (click)="sasientoEconomico('53')" type="checkbox"/>
+          <input (click)="sasientoEconomico('54')" type="checkbox"/>
+        </div>
+      </div>
         <h3 id="conformation-message" class="conformation"></h3>
-        <button id="book-btn" class="btn-style">Reserva ahora</button>
-    </div>
+        <button (click)="enviar()" id="book-btn" class="btn-style">Reserva ahora</button>
+      </form>
 
     <div class="booking-content">
         <h1>DESCUBRE <br> A TRAVES DEL MUNDO</h1>
