--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,7 +13,7 @@
       escoger los asientos disponibles,<br> hacer reserva de un vuelo con días te anticipación <br> y tener
       la posibilidad de pagar el vuelo al instante o con un plazo de tiempo determinado.</p>
     <div>
-      <button type="button" [routerLink]="['/siguiente-boton']"><span></span>Siguiente</button>
+      <button type="button" [routerLink]="['/login-usuario']"><span></span>Siguiente</button>
     </div>
   </div>
 </div>
