--- a/src/app/components/menu-usuario/menu-usuario.component.css
+++ b/src/app/components/menu-usuario/menu-usuario.component.css
@@ -165,6 +165,22 @@ margin-left: 10px;
 
 }
 
+.info-box {
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #f0f0f0;
+  width: 300px;
+}
+
+.info-box h2 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.info-box p {
+  margin-bottom: 10px;
+}
 
 
 
