Román, nunca pongas last commit

--- a/src/app/components/menu-usuario/menu-usuario.component.html
+++ b/src/app/components/menu-usuario/menu-usuario.component.html
@@ -71,39 +71,39 @@
         </div>
       <div class="contenedor-asientos" multiple >
           <div class="sub-contenedor-asientos">
-            <input (click)="sasientoEconomico('00')" type="checkbox"/>
-            <input (click)="sasientoEconomico('01')" type="checkbox"/>
-            <input (click)="sasientoEconomico('02')" type="checkbox"/>
-            <input (click)="sasientoEconomico('03')" type="checkbox"/>
-            <input (click)="sasientoEconomico('04')" type="checkbox"/>
+            <input (click)="sasientoNormal('00')" type="checkbox"/>
+            <input (click)="sasientoNormal('01')" type="checkbox"/>
+            <input (click)="sasientoNormal('02')" type="checkbox"/>
+            <input (click)="sasientoNormal('03')" type="checkbox"/>
+            <input (click)="sasientoNormal('04')" type="checkbox"/>
           </div>
           <div class="sub-contenedor-asientos">
-            <input (click)="sasientoEconomico('10')" type="checkbox"/>
-            <input (click)="sasientoEconomico('11')" type="checkbox"/>
-            <input (click)="sasientoEconomico('12')" type="checkbox"/>
-            <input (click)="sasientoEconomico('13')" type="checkbox"/>
-            <input (click)="sasientoEconomico('14')" type="checkbox"/>
+            <input (click)="sasientoNormal('10')" type="checkbox"/>
+            <input (click)="sasientoNormal('11')" type="checkbox"/>
+            <input (click)="sasientoNormal('12')" type="checkbox"/>
+            <input (click)="sasientoNormal('13')" type="checkbox"/>
+            <input (click)="sasientoNormal('14')" type="checkbox"/>
           </div>
           <div class="sub-contenedor-asientos">
-            <input (click)="sasientoEconomico('20')" type="checkbox"/>
-            <input (click)="sasientoEconomico('21')" type="checkbox"/>
-            <input (click)="sasientoEconomico('22')" type="checkbox"/>
-            <input (click)="sasientoEconomico('23')" type="checkbox"/>
-            <input (click)="sasientoEconomico('24')" type="checkbox"/>
+            <input (click)="sasientoNormal('20')" type="checkbox"/>
+            <input (click)="sasientoNormal('21')" type="checkbox"/>
+            <input (click)="sasientoNormal('22')" type="checkbox"/>
+            <input (click)="sasientoNormal('23')" type="checkbox"/>
+            <input (click)="sasientoNormal('24')" type="checkbox"/>
           </div>
           <div class="sub-contenedor-asientos">
-            <input (click)="sasientoEconomico('30')" type="checkbox"/>
-            <input (click)="sasientoEconomico('31')" type="checkbox"/>
-            <input (click)="sasientoEconomico('42')" type="checkbox"/>
-            <input (click)="sasientoEconomico('43')" type="checkbox"/>
-            <input (click)="sasientoEconomico('44')" type="checkbox"/>
+            <input (click)="sasientoNormal('30')" type="checkbox"/>
+            <input (click)="sasientoNormal('31')" type="checkbox"/>
+            <input (click)="sasientoNormal('42')" type="checkbox"/>
+            <input (click)="sasientoNormal('43')" type="checkbox"/>
+            <input (click)="sasientoNormal('44')" type="checkbox"/>
           </div>
           <div class="sub-contenedor-asientos">
-            <input (click)="sasientoEconomico('50')" type="checkbox"/>
-            <input (click)="sasientoEconomico('51')" type="checkbox"/>
-            <input (click)="sasientoEconomico('52')" type="checkbox"/>
-            <input (click)="sasientoEconomico('53')" type="checkbox"/>
-            <input (click)="sasientoEconomico('54')" type="checkbox"/>
+            <input (click)="sasientoNormal('50')" type="checkbox"/>
+            <input (click)="sasientoNormal('51')" type="checkbox"/>
+            <input (click)="sasientoNormal('52')" type="checkbox"/>
+            <input (click)="sasientoNormal('53')" type="checkbox"/>
+            <input (click)="sasientoNormal('54')" type="checkbox"/>
           </div>
         </div>
         <div class="input-group f-class">
@@ -115,42 +115,44 @@
       </div>
     <div class="contenedor-asientos" multiple >
         <div class="sub-contenedor-asientos">
-          <input (click)="sasientoEconomico('00')" type="checkbox"/>
-          <input (click)="sasientoEconomico('01')" type="checkbox"/>
-          <input (click)="sasientoEconomico('02')" type="checkbox"/>
-          <input (click)="sasientoEconomico('03')" type="checkbox"/>
-          <input (click)="sasientoEconomico('04')" type="checkbox"/>
+          <input (click)="sasientoBasico('00')" type="checkbox"/>
+          <input (click)="sasientoBasico('01')" type="checkbox"/>
+          <input (click)="sasientoBasico('02')" type="checkbox"/>
+          <input (click)="sasientoBasico('03')" type="checkbox"/>
+          <input (click)="sasientoBasico('04')" type="checkbox"/>
         </div>
         <div class="sub-contenedor-asientos">
-          <input (click)="sasientoEconomico('10')" type="checkbox"/>
-          <input (click)="sasientoEconomico('11')" type="checkbox"/>
-          <input (click)="sasientoEconomico('12')" type="checkbox"/>
-          <input (click)="sasientoEconomico('13')" type="checkbox"/>
-          <input (click)="sasientoEconomico('14')" type="checkbox"/>
+          <input (click)="sasientoBasico('10')" type="checkbox"/>
+          <input (click)="sasientoBasico('11')" type="checkbox"/>
+          <input (click)="sasientoBasico('12')" type="checkbox"/>
+          <input (click)="sasientoBasico('13')" type="checkbox"/>
+          <input (click)="sasientoBasico('14')" type="checkbox"/>
         </div>
         <div class="sub-contenedor-asientos">
-          <input (click)="sasientoEconomico('20')" type="checkbox"/>
-          <input (click)="sasientoEconomico('21')" type="checkbox"/>
-          <input (click)="sasientoEconomico('22')" type="checkbox"/>
-          <input (click)="sasientoEconomico('23')" type="checkbox"/>
-          <input (click)="sasientoEconomico('24')" type="checkbox"/>
+          <input (click)="sasientoBasico('20')" type="checkbox"/>
+          <input (click)="sasientoBasico('21')" type="checkbox"/>
+          <input (click)="sasientoBasico('22')" type="checkbox"/>
+          <input (click)="sasientoBasico('23')" type="checkbox"/>
+          <input (click)="sasientoBasico('24')" type="checkbox"/>
         </div>
         <div class="sub-contenedor-asientos">
-          <input (click)="sasientoEconomico('30')" type="checkbox"/>
-          <input (click)="sasientoEconomico('31')" type="checkbox"/>
-          <input (click)="sasientoEconomico('42')" type="checkbox"/>
-          <input (click)="sasientoEconomico('43')" type="checkbox"/>
-          <input (click)="sasientoEconomico('44')" type="checkbox"/>
+          <input (click)="sasientoBasico('30')" type="checkbox"/>
+          <input (click)="sasientoBasico('31')" type="checkbox"/>
+          <input (click)="sasientoBasico('42')" type="checkbox"/>
+          <input (click)="sasientoBasico('43')" type="checkbox"/>
+          <input (click)="sasientoBasico('44')" type="checkbox"/>
         </div>
         <div class="sub-contenedor-asientos">
-          <input (click)="sasientoEconomico('50')" type="checkbox"/>
-          <input (click)="sasientoEconomico('51')" type="checkbox"/>
-          <input (click)="sasientoEconomico('52')" type="checkbox"/>
-          <input (click)="sasientoEconomico('53')" type="checkbox"/>
-          <input (click)="sasientoEconomico('54')" type="checkbox"/>
+          <input (click)="sasientoBasico('50')" type="checkbox"/>
+          <input (click)="sasientoBasico('51')" type="checkbox"/>
+          <input (click)="sasientoBasico('52')" type="checkbox"/>
+          <input (click)="sasientoBasico('53')" type="checkbox"/>
+          <input (click)="sasientoBasico('54')" type="checkbox"/>
         </div>
       </div>
         <h3 id="conformation-message" class="conformation"></h3>
+
+        <button (click)="preciosAsientos()" id="book-btn" class="btn-style">Ver precios de asientos</button>
 
         <button (click)="enviarAhora()" id="book-btn" class="btn-style">Reserva ahora</button>
 
@@ -161,38 +163,26 @@
     <div class="booking-content">
         <h1>DESCUBRE <br> A TRAVÉS DEL MUNDO</h1>
 
+      <div style="color: black;" class="info-box" *ngIf="mostrarPrecios">
+
+        <pre>
+          <span >El precio del asiento vip es:{{vuelosMostrar.precioAsientoVip}}</span>
+          <span >el precio del asiento normal es:{{vuelosMostrar.precioAsientoNormal}}</span>
+          <span >El precio del asiento basico es:{{vuelosMostrar.precioAsientoBasico}}</span>
+        </pre>
+
+      </div>
+
       <div style="color: black;" class="info-box" *ngIf="vuelo">
           <pre>
             <span >Id del vuelo:{{vuelosMostrar.idVuelo}}</span>
             <span >El aeropuerto de origen es:{{vuelosMostrar.idAeropuertoOrigen}}</span>
             <span >Id aeropuertode destino es:{{vuelosMostrar.idAeropuertoDestino}}</span>
-            <span >EL precio es:{{vuelosMostrar.precio}}</span>
+            <span >EL precio es:{{precio}}</span>
             <span >la hora de salida es:{{vuelosMostrar.horaSalida}}</span>
             <span >La hora de llegada es:{{vuelosMostrar.horaLlegada}}</span>
-            <span >El precio del asiento vip es:{{vuelosMostrar.precioAsientoVip}}</span>
-            <span >el precio del asiento normal es:{{vuelosMostrar.precioAsientoNormal}}</span>
-            <span >El precio del asineot basico es:{{vuelosMostrar.precioAsientoBasico}}</span>
+            <span >La hora de llegada es:{{vuelosMostrar.horaLlegada}}</span>
+            
           </pre>
-            </div>
-
-            <!-- {
-              "idVuelo": 6,
-              "idAeropuertoOrigen": 24,
-              "idAeropuertoDestino": 8,
-              "precio": 999,
-              "horaSalida": "2023-03-25T11:00:00.000+00:00",
-              "horaLlegada": "2023-03-25T12:00:00.000+00:00",
-              "precioAsientoVip": 2499,
-              "precioAsientoNormal": 1499,
-              "precioAsientoBasico": 799,
-              "estado": "A"
-            } -->
-
-
-
-
-
-
-
-</div>
-
+        </div>
+    </div>
