--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,7 +10,7 @@
   <div class="content">
     <h1>GESTIONA TU VUELO</h1>
     <p>Podras seleccionar el vuelo deseado,
-      escoger los asientos disponibles,<br> hacer reserva de un vuelo con días te anticipación <br> y tener
+      escoger los asientos disponibles,<br> y tener
       la posibilidad de pagar el vuelo al instante o con un plazo de tiempo determinado.</p>
     <div>
       <button type="button" [routerLink]="['/login-usuario']"><span></span>Siguiente</button>
