--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,13 +5,17 @@
 </head>
 <body>
 
+  <div>
+    <a class="active" href="#">Volver</a>
+</div>
+
 <form (ngSubmit)="login()" [formGroup]="loginUsuario"  class="login-form">
 
   <h1>Login</h1>
-  <span *ngIf="error" class="alert alert-danger">Credenciales Invalidas </span>
+  <span *ngIf="error" class="alert alert-danger">Credenciales inválidas </span>
   <div class="form-input-material">
     <input formControlName="cedula" type="text" name="username" id="username" placeholder=" " autocomplete="off" class="form-control-material"  />
-    <label >Cedula</label>
+    <label >Cédula</label>
   </div>
   <button [disabled]="loginUsuario.invalid" type="submit" class="btn btn-primary btn-ghost"  >Login</button>
 </form>
