--- a/src/app/components/menu-usuario/menu-usuario.component.css
+++ b/src/app/components/menu-usuario/menu-usuario.component.css
@@ -1,44 +1,47 @@
-
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   text-decoration: none;
   list-style-type: none;
 }
-.wrapper{
+
+.wrapper {
   font-family: 'Roboto', sans-serif;
-  background-image: linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65) ), url(../../../assets/menu.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(../../../assets/menu.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: scroll;
   background-size: cover;
 }
 
-nav{
+nav {
   width: 90%;
   margin: auto;
   padding: 25px 0;
   text-align: right;
 }
-.container{
+
+.container {
   width: 1200px;
   max-width: 85%;
   margin: 0 auto;
 }
-nav ul li{
+
+nav ul li {
   list-style: none;
   display: inline-block;
   margin: 0 20px;
   position: relative;
 }
-nav ul li a{
+
+nav ul li a {
   text-decoration: none;
   color: #fff;
   text-transform: uppercase;
 }
 
-nav ul li::after{
+nav ul li::after {
   content: '';
   height: 3px;
   width: 0;
@@ -49,38 +52,44 @@ nav ul li::after{
   transition: 0.5s;
 }
 
-nav ul li:hover::after{
+nav ul li:hover::after {
   width: 100%;
 }
 
-.main-content{
+.main-content {
   display: grid;
   grid-template-columns: 2fr 3fr;
   gap: 70px;
   align-items: center;
 }
-.booking-form{
+
+.booking-form {
   background-color: #fff;
   border: 1px solid #ddd;
   padding: 25px;
   border-radius: 5px;
   float: left;
 }
-.booking-form h3{
+
+.booking-form h3 {
   margin: 10px 0px;
 }
-.booking-form  .input-group{
+
+.booking-form .input-group {
   margin: 10px 0;
 }
-.f-class{
+
+.f-class {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.inp-width{
+
+.inp-width {
   min-width: 300px;
 }
-.plus-minus-btn{
+
+.plus-minus-btn {
   color: #3352F2;
   font-size: 30px;
   padding: 2px;
@@ -88,14 +97,17 @@ nav ul li:hover::after{
   word-spacing: 20px;
   justify-content: space-between;
 }
-.booking-form  .calculations{
+
+.booking-form .calculations {
   margin: 10px 0;
 }
-.booking-form  .calculations p{
+
+.booking-form .calculations p {
   font-weight: 500;
   margin-bottom: 10px;
 }
-.booking-form input{
+
+.booking-form input {
   width: 100%;
   display: block;
   padding: 10px;
@@ -105,16 +117,19 @@ nav ul li:hover::after{
   border-radius: 4px;
   margin: 10px 0;
 }
-.booking-form .inputs{
+
+.booking-form .inputs {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 10px;
 }
-.booking-content{
+
+.booking-content {
   color: #fff;
   width: 80%;
 }
-.booking-content h1{
+
+.booking-content h1 {
   font-size: 70px;
   text-transform: uppercase;
   font-family: 'times new roman', cursive;
@@ -122,7 +137,7 @@ nav ul li:hover::after{
   margin-bottom: 25px;
 }
 
-.btn-style{
+.btn-style {
   display: block;
   width: 100%;
   padding: 10px;
@@ -130,18 +145,21 @@ nav ul li:hover::after{
   border: none;
   color: #fff;
   font-weight: 500;
-  background-color:  #3352F2;
+  background-color: #3352F2;
 }
-.conformation{
+
+.conformation {
   color: red;
   text-align: center;
 
 }
-.amount{
+
+.amount {
   display: flex;
   justify-content: space-between;
 }
-.contenedor-asientos{
+
+.contenedor-asientos {
   width: 100%;
   height: auto;
   display: flex;
@@ -150,7 +168,7 @@ nav ul li:hover::after{
   justify-content: center;
 }
 
-.sub-contenedor-asientos{
+.sub-contenedor-asientos {
   width: 100%;
   height: auto;
   display: flex;
@@ -159,18 +177,19 @@ nav ul li:hover::after{
   justify-content: space-around;
 
 }
-select{
-width: 150px;
-margin-left: 10px;
+
+select {
+  width: 150px;
+  margin-left: 10px;
 
 }
 
 .info-box {
-  border: 1px solid #ccc;
+  border: 0px solid #ccc;
   padding: 20px;
   border-radius: 5px;
   background-color: #f0f0f0;
-  width: 300px;
+  width: 440px;
 }
 
 .info-box h2 {
@@ -181,7 +200,3 @@ margin-left: 10px;
 .info-box p {
   margin-bottom: 10px;
 }
-
-
-
-
