--- a/src/app/components/menu-usuario/menu-usuario.component.css
+++ b/src/app/components/menu-usuario/menu-usuario.component.css
@@ -13,6 +13,8 @@
   background-position: center center;
   background-attachment: scroll;
   background-size: cover;
+  min-height: 100vh;
+
 }
 
 nav {
@@ -22,10 +24,19 @@ nav {
   text-align: right;
 }
 
+select {
+  width: 150px;
+}
+
 .container {
-  width: 1200px;
-  max-width: 85%;
+  min-width: 800px;
+  max-width: 95%;
   margin: 0 auto;
+
+}
+
+.main-content {
+  max-width: 1200px;
 }
 
 nav ul li {
@@ -79,6 +90,8 @@ nav ul li:hover::after {
   margin: 10px 0;
 }
 
+
+
 .f-class {
   display: flex;
   justify-content: space-between;
@@ -126,11 +139,12 @@ nav ul li:hover::after {
 
 .booking-content {
   color: #fff;
-  width: 80%;
+  width: 100%;
 }
 
 .booking-content h1 {
   font-size: 70px;
+
   text-transform: uppercase;
   font-family: 'times new roman', cursive;
   font-weight: 400;
@@ -186,10 +200,12 @@ select {
 
 .info-box {
   border: 0px solid #ccc;
-  padding: 20px;
   border-radius: 5px;
   background-color: #f0f0f0;
-  width: 440px;
+  min-width: 440px;
+  max-width: 500px;
+  padding: 0;
+  padding-top: 10px;
 }
 
 .info-box h2 {
@@ -199,4 +215,9 @@ select {
 
 .info-box p {
   margin-bottom: 10px;
+}
+
+.btn-style {
+  max-width: 300px;
+  margin-left: 10%;
 }
